# feedback-back/src/main/java/com/isep/feedback/api/server/UsersApiDelegate.java
@@ -63,11 +63,11 @@ public interface UsersApiDelegate {
         getRequest().ifPresent(request -> {
             for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
-                    ApiUtil.setExampleResponse(request, "application/json", "{  \"lastName\" : \"lastName\",  \"role\" : [ \"role\", \"role\" ],  \"color\" : \"color\",  \"courses_id\" : [ 5, 5 ],  \"isep_id\" : 1,  \"avatar\" : \"avatar\",  \"enabled\" : 6,  \"firstName\" : \"firstName\",  \"password\" : \"password\",  \"phone\" : \"phone\",  \"id\" : 0,  \"stakeholders_id\" : [ 5, 5 ],  \"email\" : \"email\",  \"username\" : \"username\"}");
+                    ApiUtil.setExampleResponse(request, "application/json", "{  \"firstName\" : \"firstName\",  \"lastName\" : \"lastName\",  \"password\" : \"password\",  \"color\" : \"color\",  \"phone\" : \"phone\",  \"parent_id\" : \"parent_id\",  \"isep_id\" : 1,  \"id\" : 0,  \"avatar\" : \"avatar\",  \"enabled\" : 6,  \"email\" : \"email\",  \"username\" : \"username\"}");
                     break;
                 }
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/xml"))) {
-                    ApiUtil.setExampleResponse(request, "application/xml", "<User>  <id>123456789</id>  <username>aeiou</username>  <enabled>123</enabled>  <firstName>aeiou</firstName>  <lastName>aeiou</lastName>  <isep_id>123456789</isep_id>  <email>aeiou</email>  <password>aeiou</password>  <phone>aeiou</phone>  <role>aeiou</role>  <avatar>aeiou</avatar>  <color>aeiou</color>  <courses_id>123</courses_id>  <stakeholders_id>123</stakeholders_id></User>");
+                    ApiUtil.setExampleResponse(request, "application/xml", "<User>  <id>123456789</id>  <username>aeiou</username>  <enabled>123</enabled>  <firstName>aeiou</firstName>  <lastName>aeiou</lastName>  <isep_id>123456789</isep_id>  <email>aeiou</email>  <password>aeiou</password>  <phone>aeiou</phone>  <avatar>aeiou</avatar>  <color>aeiou</color>  <parent_id>aeiou</parent_id></User>");
                     break;
                 }
             }
@@ -83,11 +83,11 @@ public interface UsersApiDelegate {
         getRequest().ifPresent(request -> {
             for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
-                    ApiUtil.setExampleResponse(request, "application/json", "{  \"lastName\" : \"lastName\",  \"role\" : [ \"role\", \"role\" ],  \"color\" : \"color\",  \"courses_id\" : [ 5, 5 ],  \"isep_id\" : 1,  \"avatar\" : \"avatar\",  \"enabled\" : 6,  \"firstName\" : \"firstName\",  \"password\" : \"password\",  \"phone\" : \"phone\",  \"id\" : 0,  \"stakeholders_id\" : [ 5, 5 ],  \"email\" : \"email\",  \"username\" : \"username\"}");
+                    ApiUtil.setExampleResponse(request, "application/json", "{  \"firstName\" : \"firstName\",  \"lastName\" : \"lastName\",  \"password\" : \"password\",  \"color\" : \"color\",  \"phone\" : \"phone\",  \"parent_id\" : \"parent_id\",  \"isep_id\" : 1,  \"id\" : 0,  \"avatar\" : \"avatar\",  \"enabled\" : 6,  \"email\" : \"email\",  \"username\" : \"username\"}");
                     break;
                 }
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/xml"))) {
-                    ApiUtil.setExampleResponse(request, "application/xml", "<User>  <id>123456789</id>  <username>aeiou</username>  <enabled>123</enabled>  <firstName>aeiou</firstName>  <lastName>aeiou</lastName>  <isep_id>123456789</isep_id>  <email>aeiou</email>  <password>aeiou</password>  <phone>aeiou</phone>  <role>aeiou</role>  <avatar>aeiou</avatar>  <color>aeiou</color>  <courses_id>123</courses_id>  <stakeholders_id>123</stakeholders_id></User>");
+                    ApiUtil.setExampleResponse(request, "application/xml", "<User>  <id>123456789</id>  <username>aeiou</username>  <enabled>123</enabled>  <firstName>aeiou</firstName>  <lastName>aeiou</lastName>  <isep_id>123456789</isep_id>  <email>aeiou</email>  <password>aeiou</password>  <phone>aeiou</phone>  <avatar>aeiou</avatar>  <color>aeiou</color>  <parent_id>aeiou</parent_id></User>");
                     break;
                 }
             }
@@ -103,11 +103,11 @@ public interface UsersApiDelegate {
         getRequest().ifPresent(request -> {
             for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
-                    ApiUtil.setExampleResponse(request, "application/json", "{  \"lastName\" : \"lastName\",  \"role\" : [ \"role\", \"role\" ],  \"color\" : \"color\",  \"courses_id\" : [ 5, 5 ],  \"isep_id\" : 1,  \"avatar\" : \"avatar\",  \"enabled\" : 6,  \"firstName\" : \"firstName\",  \"password\" : \"password\",  \"phone\" : \"phone\",  \"id\" : 0,  \"stakeholders_id\" : [ 5, 5 ],  \"email\" : \"email\",  \"username\" : \"username\"}");
+                    ApiUtil.setExampleResponse(request, "application/json", "{  \"firstName\" : \"firstName\",  \"lastName\" : \"lastName\",  \"password\" : \"password\",  \"color\" : \"color\",  \"phone\" : \"phone\",  \"parent_id\" : \"parent_id\",  \"isep_id\" : 1,  \"id\" : 0,  \"avatar\" : \"avatar\",  \"enabled\" : 6,  \"email\" : \"email\",  \"username\" : \"username\"}");
                     break;
                 }
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/xml"))) {
-                    ApiUtil.setExampleResponse(request, "application/xml", "<User>  <id>123456789</id>  <username>aeiou</username>  <enabled>123</enabled>  <firstName>aeiou</firstName>  <lastName>aeiou</lastName>  <isep_id>123456789</isep_id>  <email>aeiou</email>  <password>aeiou</password>  <phone>aeiou</phone>  <role>aeiou</role>  <avatar>aeiou</avatar>  <color>aeiou</color>  <courses_id>123</courses_id>  <stakeholders_id>123</stakeholders_id></User>");
+                    ApiUtil.setExampleResponse(request, "application/xml", "<User>  <id>123456789</id>  <username>aeiou</username>  <enabled>123</enabled>  <firstName>aeiou</firstName>  <lastName>aeiou</lastName>  <isep_id>123456789</isep_id>  <email>aeiou</email>  <password>aeiou</password>  <phone>aeiou</phone>  <avatar>aeiou</avatar>  <color>aeiou</color>  <parent_id>aeiou</parent_id></User>");
                     break;
                 }
             }
